src/test/deca/syntax/invalid/personal/protected_method.deca
// Description:
//   declarer une methode avec une visibility ce qui est impossible en deca
//
// Resultats:
// erreur
//
//
// Historique:
//    cree le 14/01/2025

class A{
   protected void jsp(){
    
   }
}

